Added one book to list

--- a/resources/sources/sources.tex
+++ b/resources/sources/sources.tex
@@ -17,6 +17,12 @@
 \maketitle
 \section{URLS/books}
 leave a description please.
+
+\textit{Numerical Methods and Advanced Simulation in Biomechanics and Biological Processes}
+
+Discription from site: Numerical Methods and Advanced Simulation in Biomechanics and Biological Processes covers new and exciting modeling methods to help bioengineers tackle problems for which the Finite Element Method is not appropriate. The book covers a wide range of important subjects in the field of numerical methods applied to biomechanics, including bone biomechanics, tissue and cell mechanics, 3D printing, computer assisted surgery and fluid dynamics. Modeling strategies, technology and approaches are continuously evolving as the knowledge of biological processes increases. Both theory and applications are covered, making this an ideal book for researchers, students and R + D professionals.
+
+URL: https://www.elsevier.com/books/numerical-methods-and-advanced-simulation-in-biomechanics-and-biological-processes/9780128117187
 \section{Modeling the heating of biological tissue based on the hyperbolic heat transfer equation}
 Possible heat transfer equation for tissue
 https://www.sciencedirect.com/science/article/pii/S0895717709001605
