Added rest of books

--- a/resources/sources/sources.tex
+++ b/resources/sources/sources.tex
@@ -20,9 +20,24 @@ leave a description please.
 
 \textit{Numerical Methods and Advanced Simulation in Biomechanics and Biological Processes}
 
-Discription from site: Numerical Methods and Advanced Simulation in Biomechanics and Biological Processes covers new and exciting modeling methods to help bioengineers tackle problems for which the Finite Element Method is not appropriate. The book covers a wide range of important subjects in the field of numerical methods applied to biomechanics, including bone biomechanics, tissue and cell mechanics, 3D printing, computer assisted surgery and fluid dynamics. Modeling strategies, technology and approaches are continuously evolving as the knowledge of biological processes increases. Both theory and applications are covered, making this an ideal book for researchers, students and R + D professionals.
+Description from site: Numerical Methods and Advanced Simulation in Biomechanics and Biological Processes covers new and exciting modeling methods to help bioengineers tackle problems for which the Finite Element Method is not appropriate. The book covers a wide range of important subjects in the field of numerical methods applied to biomechanics, including bone biomechanics, tissue and cell mechanics, 3D printing, computer assisted surgery and fluid dynamics. Modeling strategies, technology and approaches are continuously evolving as the knowledge of biological processes increases. Both theory and applications are covered, making this an ideal book for researchers, students and R + D professionals.
 
 URL: https://www.elsevier.com/books/numerical-methods-and-advanced-simulation-in-biomechanics-and-biological-processes/9780128117187
+\\
+
+\textit{Heat Transfer and Fluid Flow in Biological Processes}
+
+Description from site: '...covers emerging areas in fluid flow and heat transfer relevant to biosystems and medical technology. This book uses an interdisciplinary approach to provide a comprehensive prospective on biofluid mechanics and heat transfer advances and includes reviews of the most recent methods in modeling of flows in biological media, such as CFD. Written by internationally recognized researchers in the field, each chapter provides a strong introductory section that is useful to both readers currently in the field and readers interested in learning more about these areas.'
+
+URL: https://www.elsevier.com/books/T/A/9780124080775
+\\
+
+\textit{Human Interaction with Electromagnetic Fields, 1st Edition}
+
+Description from site: "...presents some highly rigorous and sophisticated integral equation techniques from computational electromagnetics (CEM), along with practical techniques for the calculation and measurement of internal dosimetry. Theory is accompanied by numerical modeling algorithms and illustrative computational examples that range from academic to full real-world scenarios."
+
+URL: https://www.elsevier.com/books/human-interaction-with-electromagnetic-fields/9780128164433
+
 \section{Modeling the heating of biological tissue based on the hyperbolic heat transfer equation}
 Possible heat transfer equation for tissue
 https://www.sciencedirect.com/science/article/pii/S0895717709001605
