First update of lost material

--- a/proposalDrafts/workingDraft1.tex
+++ b/proposalDrafts/workingDraft1.tex
@@ -17,22 +17,24 @@
 \author{Emily Cranwell and Daniel Huantes}
 \maketitle
 \section{Introduction}
-Thermal conduction in tissue is firmly within TSRL's main area of interest: laser bio effects. Whenever lasers come into contact with tissue, unique problems arise that makes computational modeling extremely valuable in determining a variety of effects. The research through Fort Hays with SAIC that Dan and Emily have worked on has dealt with focusing on different parts of thermal modeling. Between the two of us we have worked on a tool to generatie linear combinations of temperature profiles and evaluate damage thresholds based on the arrhenius integral, and dealt with solving the heat equation with irregular spacing conditions in different geometries. The idea for this project came when Dan was thinking, as he often does, about cooking. He was thinking about how the heat equation might be used to model the cooking of chicken. We began discussing the unique issues something like this could present, and we began discussing the possibility of putting together a proposal for a research project based on modeling thermal effects in tissue, including potential applications for future use of the arrhenius integral.
+The research through Fort Hays with SAIC that we have both worked on has dealt with focusing on different part of the lab's main area of interest: laser bio effects. Between the two of us  we have worked on a tool to generatie linear combinations of temperature profiles and evaluate damage thresholds based on the arrhenius integral, and dealt with solving the heat equation with various conditions in different geometries. The idea for this project came when Dan was thinking, as he often does, about cooking. He was thinking about how the heat equation might be used to model the cooking of chicken. He told Emily, and we began discussing the possibility of putting together a proposal for a research project based on modeling thermal effects in tissue, including potential applications for use of the arrhenius integral.
 
 \section{Motivation}
 \indent The motivation for this is driven by the vast amounts of physical applications in medical practices that involove heat and tissue. The bioheat tranfer equation takes into account both the convective flow effects of blood perfusion and heat conduction. To be sloved, the bioheat transfer equation requires the complete knowledge of anatomy of all the vascular components in the region of interest. For this reason, each application will require extensive knowledge of physical and biological components, and gives rise for the need of a general form as a foundation upon which each of these specific applications can be built. 
 
 \section{Why is this physically difficult}
+
 \subsection{Biology/BioPhysics}
-\indent We know that blood enters through arteries and flows to the tissue cells through blood capillaries. The blood flow rate is inversely proportional to the total cross-sectional area of the blood vessels. Therefore, the blood flow velocity decreases if the effective cross-sectional area of the vessels increases. The 1D bioheat transfer equation gives satisfactory results when the direction of heat propagation is in a perpendicular direction to the skin surface, so we plan to set up a physical situation with such geometry. The Pennes' bioheat can be used to model this, but does not account for large blood vessels. 
+Heat transfer is affected by vessel geometry, blood rates (wich cange locally since arteries and veins have different flow rates), and the thermal capacity of blood. We know that blood enters through arteries and flows to the tissue cells through blood capillaries. The blood flow rate is inversely proportional to the total cross-sectional area of the blood vessels. Therefore, the blood flow velocity decreases if the effective cross-sectional area of the vessels increases. 
+
+The Pennes 1D bioheat transfer equation gives satisfactory results when the direction of heat propagation is in a perpendicular direction to the skin surface, so such a geometry would allow for simplification. 
+Pennes made quite a few assumpations that have since been proven wrong, an example being vessel size. The bioheat equation does not account for large blood vessels. 
+
+Assumptions here? 
 	
 \subsection{Computationally/mathematically}
-Modeling transient heat transfer in tissue presents several unique challenges, making finding an analytic solution to problems to be impossible, or too computationally intense to use for multiple situations. Computational physics modeling offers more versatile option that requires less set up time once a model is in place. The difficulties of this problem lie in 3 parts: the geometries, the unknown properties, and modeling transient diffusive heat transfer.
-The geometry of tissue is such that it is weakly homogenous, where it's properies vary within the medium based on position, but stay reasonably consistent. The physical composition of the material greatly influences heat transfer as well, and a computational model should use a geometry reflecting the physical composition of the materials it attempts to model. 
-
-The next issue is finding values for the physical properties of tissue in question. This could be done by characterizing the physical properties of some tissue-like thermal phantom, or through accessng well documented values for some material. The isotropy of the material comes into play as well, as due to the weak homogeneity of the material, the thermal conductivity, $k$ can vary slightly with position. In perfectly isotropic media, $k$ is a constant scalar, while in a material that exhibits anisitropy, or in which heat may diffuse more readily in one direction than another, $k$ is a rank 2 tensor. 
-
-Finally, the temperature throughout the medium is location and time dependent, and while regions of relatively similar properies can be identified, solving the heat equation at each value of $t$ in each region subject to boundary conditions that change through each time step presents a large computational strain. This issue's main source is that for relatively long timescales, the transient response may have large effects, especially in the case of situations in which the source dissapears before a steady state solution is reached. but it likely does not follow a simple heat transfer equation, based on it's weakly homogenous geometry it would follow some diffusive equation that deals with the unique situation biological tissue presents.
+Modeling heat transfer in tissue presents several unique challenges, causing an analytic solution to problems to be impossible, or too computationally intense to use for multiple situations. Computational physics modeling offers a more versatile option that requires less set up time once a model is in place. The difficulties of this problem lie in 3 parts: the geometries, the unknown properties, and modeling diffusive heat transfer.
+The geometry of tissue is such that it is weakly homogenous, where it's properies vary within the medium based on position, but stay reasonably consistent. The next issue in characterizing the physical properties of some tissue-like thermal phantom. Finally, the temperature throughout the medium is location and time dependent, but it likely does not follow a simple heat transfer equation, based on it's weakly homogenous geometry it would follow some diffusive equation that deals with the unique situation biological tissue presents.
 \section{Methodology}
 Our plan is to create a 3D time-dependent thermal solver to measure heat flow in weakly homogenous media in C++, using existing libraries that Dr. Clark has developed. By applying a hyperbolic heat equation in conjunction with numerical techniques to deal with the unique geometry that weakly homogenous tissue presents. By working with the libraries Dr. Clark has created we save time in terms of developing frameworks for modeling 3D geometries, as well as having any work we may accomplish easily able to be furthered, such as through the use of LibArrhenius to calculate damage thresholds. In terms of the long term we also have an idea for using grocery store meat in order to have a relatively cheap, replicable thing to qualitatively compare
 
