--- a/resources/sources/sources.tex
+++ b/resources/sources/sources.tex
@@ -20,7 +20,7 @@ leave a description please.
 
 \textit{Numerical Methods and Advanced Simulation in Biomechanics and Biological Processes}
 
-Description from site: Numerical Methods and Advanced Simulation in Biomechanics and Biological Processes covers new and exciting modeling methods to help bioengineers tackle problems for which the Finite Element Method is not appropriate. The book covers a wide range of important subjects in the field of numerical methods applied to biomechanics, including bone biomechanics, tissue and cell mechanics, 3D printing, computer assisted surgery and fluid dynamics. Modeling strategies, technology and approaches are continuously evolving as the knowledge of biological processes increases. Both theory and applications are covered, making this an ideal book for researchers, students and R + D professionals.
+Description from site: "Numerical Methods and Advanced Simulation in Biomechanics and Biological Processes covers new and exciting modeling methods to help bioengineers tackle problems for which the Finite Element Method is not appropriate. The book covers a wide range of important subjects in the field of numerical methods applied to biomechanics, including bone biomechanics, tissue and cell mechanics, 3D printing, computer assisted surgery and fluid dynamics. Modeling strategies, technology and approaches are continuously evolving as the knowledge of biological processes increases. Both theory and applications are covered, making this an ideal book for researchers, students and R + D professionals."
 
 URL: https://www.elsevier.com/books/numerical-methods-and-advanced-simulation-in-biomechanics-and-biological-processes/9780128117187
 \\
